# CloudVault

./: .gitignore  README.md  docker-compose.mysql.yml  mkdocs.yml
.github/workflows/: client-ci.yml  docs.yml  server-ci.yml
QtProject/Client/: Client.pro  chat.cpp  chat.h  chat.ui  client.cpp  client.h  client.ui  file.cpp  file.h  file.ui  friend.cpp  friend.h  friend.ui  images.qrc  index.cpp  index.h  index.ui  main.cpp  onlineuser.cpp  onlineuser.h  onlineuser.ui  protocol.h  reshandler.cpp  reshandler.h  sharefile.cpp  sharefile.h  sharefile.ui  uploader.cpp  uploader.h
QtProject/Server/: Server.pro  clienttask.cpp  clienttask.h  main.cpp  msghandler.cpp  msghandler.h  mytcpserver.cpp  mytcpserver.h  mytcpsocket.cpp  mytcpsocket.h  operatedb.cpp  operatedb.h  protocol.cpp  protocol.h  server.cpp  server.h
client/: CMakeLists.txt
client/config/: client.example.json
client/resources/: resources.qrc
client/resources/styles/: style.qss
client/src/: app.cpp  app.h  main.cpp
client/src/network/: auth_service.cpp  auth_service.h  chat_service.cpp  chat_service.h  file_service.cpp  file_service.h  friend_service.cpp  friend_service.h  response_router.cpp  response_router.h  share_service.cpp  share_service.h  tcp_client.cpp  tcp_client.h
client/src/service/: auth_service.cpp  auth_service.h  chat_service.cpp  chat_service.h  file_service.cpp  file_service.h  friend_service.cpp  friend_service.h  group_service.cpp  group_service.h  share_service.cpp  share_service.h
client/src/ui/: chat_panel.cpp  chat_panel.h  contact_panel.cpp  contact_panel.h  detail_panel.cpp  detail_panel.h  file_panel.cpp  file_panel.h  friend_page.cpp  friend_page.h  group_list_dialog.cpp  group_list_dialog.h  login_window.cpp  login_window.h  login_window.ui  main_window.cpp  main_window.h  online_user_dialog.cpp  online_user_dialog.h  profile_panel.cpp  profile_panel.h  share_file_dialog.cpp  share_file_dialog.h  sidebar_panel.cpp  sidebar_panel.h  widget_helpers.h
cmake/: FindMySQL.cmake
common/: CMakeLists.txt
common/include/common/: crypto_utils.h  protocol.h  protocol_codec.h
common/src/: crypto_utils.cpp  protocol_codec.cpp
common/tests/: CMakeLists.txt  test_crypto.cpp  test_pdu.cpp
docs/: PROJECT_MYSQL_CONTAINER.md  index.md
docs/reference/: api.md  architecture.md  client-ui-spec.md  conventions.md  database.md  modules.md  prd.md  testing.md  ui-flow.md
docs/tutorial/: appendix-a-testing.md  appendix-b-security.md  appendix-c-cicd.md  appendix-d-errors.md  appendix-e-git-log.md  ch01-background.md  ch02-tech-stack.md  ch03-environment.md  ch04-cmake.md  ch05-skeleton.md  ch06-protocol.md  ch07-ping-pong.md  ch08-auth.md  ch09-friend.md  ch10-chat.md  ch11-file-manager.md  ch12-file-transfer.md  ch13-file-share.md  index.md
docs/tutorial/knowledge/: cicd-guide.md  cmake-guide.md  epoll-guide.md  git-guide.md  mkdocs-github-pages.md  qt-signals-slots.md
server/: CMakeLists.txt
server/config/: server.example.json
server/include/server/: event_loop.h  file_storage.h  message_dispatcher.h  server_app.h  session_manager.h  tcp_connection.h  tcp_server.h  thread_pool.h
server/include/server/db/: chat_repository.h  database.h  friend_repository.h  group_repository.h  user_repository.h
server/include/server/handler/: auth_handler.h  chat_handler.h  file_handler.h  friend_handler.h  group_handler.h  share_handler.h
server/sql/: init.sql
server/src/: event_loop.cpp  file_storage.cpp  main.cpp  message_dispatcher.cpp  server_app.cpp  session_manager.cpp  tcp_connection.cpp  tcp_server.cpp  thread_pool.cpp
server/src/db/: chat_repository.cpp  database.cpp  friend_repository.cpp  group_repository.cpp  user_repository.cpp
server/src/handler/: auth_handler.cpp  chat_handler.cpp  file_handler.cpp  friend_handler.cpp  group_handler.cpp  share_handler.cpp
server/tests/: CMakeLists.txt  test_file_handler.cpp  test_file_storage.cpp  test_helpers.h  test_session_dispatch.cpp  test_tcp_connection.cpp
